Version 47 	 2010-08-14 	 Mistake in settings 
Version 46 	 2010-08-14 	 Updates to requirements 
Version 45 	 2010-08-14 	 Adding support to create User accounts in local database and Google Apps 
Version 44 	 2010-08-14 	 Adding GoogleAppsManager. Tested 100% 
Version 43 	 2010-08-13 	 Changes to Homepage 
Version 42 	 2010-08-13 	 Added OpenID support 
Version 41 	 2010-08-13 	 Changing django-avatar version in requirements 
Version 40 	 2010-08-12 	 Upgraded django-avatar app to 1.1a5 
Version 39 	 2010-08-12 	 Making Course and Year of Joining in profile as optional 
Version 38 	 2010-08-12 	 Minor cosmetic changes in submenu 
Version 37 	 2010-08-12 	 Added 'Browse by Batch' 
Version 36 	 2010-08-12 	 another small change to fabfile 
Version 35 	 2010-08-12 	 Small change to fabfile 
Version 34 	 2010-08-12 	 Remove test_utils apps 
Version 33 	 2010-08-12 	 Deployment related changes 
Version 32 	 2010-08-12 	 Major revision. Browse by Batch. Lot of cleanup. 
Version 31 	 2010-08-11 	 Minor Look & Feel improvments 
Version 30 	 2010-08-11 	 Added lot of functional test cases 
Version 29 	 2010-08-11 	 Disabling L10N so that DATE_INPUT_FORMATS can be used in ModelForm Date Fields 
Version 28 	 2010-08-10 	 Added Sanity test cases 
Version 27 	 2010-08-10 	 Adding pysis version to the footer 
Version 26 	 2010-08-10 	 Testing related changes 
Version 25 	 2010-08-10 	 Minor changes to profile 
Version 24 	 2010-08-10 	 Fixing DoesNotExist bug in scripts/create_users.py 
Version 23 	 2010-08-10 	 Added django_extensions app. Using django to serve media when DEBUG=True 
Version 22 	 2010-08-10 	 Adding favicon support 
Version 21 	 2010-08-10 	 Small changes 
Version 20 	 2010-08-10 	 Lot of internal cleanup 
Version 19 	 2010-08-09 	 Forgot to add GA script to HomePage 
Version 18 	 2010-08-09 	 Added Google Analytics support 
Version 17 	 2010-08-09 	 Changing landing page to profile edit page 
Version 16 	 2010-08-09 	 Chaning PhoneNumber from Int to String 