@@ -1,3 +1,4 @@
+Version 48 	 2010-08-14 	 Adding related_name to profile user 
 Version 47 	 2010-08-14 	 Mistake in settings 
 Version 46 	 2010-08-14 	 Updates to requirements 
 Version 45 	 2010-08-14 	 Adding support to create User accounts in local database and Google Apps 
